# RAG-system-with-Qdrant

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  init-ollama.sh  main.py  pyproject.toml  requirements.txt
api/: routes.py
config/: settings.py
services/: Embedding_service.py  RAG_service.py  document_processor.py  document_store.py
src/: main.py
src/api/: routes.py
src/config/: settings.py
src/services/: RAG_service.py  document_processor.py  document_store.py
