[project]
name = "qdrant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "ollama>=0.3.3",
    "openpyxl==3.1.2",
    "pandas==2.1.3",
    "pydantic==2.5.0",
    "pypdf2==3.0.1",
    "python-docx==1.1.0",
    "python-multipart==0.0.6",
    "python-pptx==0.6.23",
    "qdrant-client==1.7.0",
    "sentence-transformers==2.2.2",
    "uvicorn==0.24.0",
]
